@@ -1,12 +1,16 @@
 package Paws::Net::SigninCaller {
   use Moose::Role;
-  use HTTP::Request::Common;
-  use POSIX qw(strftime);
   use JSON;
+  use URI::Template;
 
-  sub _is_internal_type {
-    my ($self, $att_type) = @_;
-    return ($att_type eq 'Str' or $att_type eq 'Int' or $att_type eq 'Bool' or $att_type eq 'Num');
+  sub _call_uri {
+    my ($self, $call, $qparams) = @_;
+    my $uri_template = $call->meta->name->_api_uri;
+    my $t = URI::Template->new( $uri_template );
+
+    my $uri = $t->process({});
+    $uri->query_form(%$qparams);
+    return $uri->as_string;
   }
 
   sub prepare_request_for_call {
@@ -14,27 +18,33 @@ package Paws::Net::SigninCaller {
 
     my $request = Paws::Net::APIRequest->new();
 
-    $request->url($self->_api_endpoint);
     $request->method('GET');
-
+   
+    my $qparams;
     if ($call->_api_call eq 'getSigninToken') {
-      $request->parameters({ Action => $call->_api_call,
-                             SessionType => 'json', 
-                             Session => encode_json({
-	                       sessionId    => $call->SessionId,
-	                       sessionKey   => $call->SessionKey,
-	                       sessionToken => $call->SessionToken
-	                     })
-                           });
+      #Until we have a way to declare objects that get json-encoded to API calls, we
+      #will have to "hand-encode" the Session Parameter
+      $qparams = { Action => $call->_api_call,
+                   SessionType => 'json',
+                   Session => encode_json({
+                     sessionId    => $call->SessionId,
+                     sessionKey   => $call->SessionKey,
+                     sessionToken => $call->SessionToken
+                   }),
+      };
     } elsif ($call->_api_call eq 'login') {
-       $request->parameters({ Action => $call->_api_call,
-                              Destination => $call->Destination,
-                              Issuer => $call->Issuer,
-                              SigninToken => $call->SigninToken
-	                     });
+       $qparams = { Action => $call->_api_call,
+                    Destination => $call->Destination,
+                    Issuer => $call->Issuer,
+                    SigninToken => $call->SigninToken
+	          };
     } else {
-      die "Don't know how to call something that isn't getSiginToken";
+      die "Don't know how to call " . $call->_api_call;
     }
+
+    my $uri = $self->_call_uri($call, $qparams);
+    $request->url($self->_api_endpoint . $uri);
+    $request->uri($uri);
 
     $self->sign($request);
 
