@@ -50,6 +50,7 @@ package Paws::API::ServiceToClass {
     route53domains => 'Route53Domains',
     s3 => 'S3',
     ses => 'SES',
+    signin => 'Signin',
     simpledb => 'SimpleDB',
     swf => 'SimpleWorkflow',
     ssm => 'SSM',
